# cheat_sheets

./: .gitignore  Pipfile  README.md  pyproject.toml
Data Science/: data-cleaning.md
MLOps/MLflow/: mlflow_docs.md  mlflow_experimentation_1.ipynb
Python/: pandas.md  plotly.md
cloud/: cloud_docs.md
cloud/google_cloud_platform/: bigquery.md  cloud_storage.md  dataflow_apache_beam.md  dataprep.md  feature_store.md  gcloud_cli.md  google_cloud_platform.md  identity_access_management.md  secretmanager.md  vertex_ai.md  vertex_ai_pipelines.md
computer_vision/: opencv.md
computer_vision/blur_detection/: blur_detection.md
data/: taxi_test.csv  taxi_train.csv
data_engineering/dbt/: dbt_docs.md  dbt_project_setup.md  sql_commands.md
data_engineering/general/: data_engineering_theory.md
data_management/: sql_utils.md
data_science/: corss_validation.md  cross_validation.md  data_leakage.md  data_preprocessing.md  data_science_docs.md  eda.md  eda_plots.ipynb  metrics.md  model_explainability.md  pipelines.md  xgboost.md
docker/: commands.md  dockerfile-commands.md  poetry_dockerfile
git/: git_docs.md  github_actions.md
justfile/: justfile_example_1
notebooks/: seaborn.ipynb
project_sample/: .drone.yml
python/: colorama.md  copier.md  files.md  matplotlib.md  os.md  pandas.md  path_experiments.py  pathlib.md  pipenv.md  plotly.md  poetry.md  pycharm.md  pylint.md  pyspark.md  pytest.md  requests.md  utils.md  yolo.md
shell_scripting/: shell_scripting_docs.md  shell_scripting_experiment.sh
statistics/: scipy.md  statistics.ipynb  statistics.md
(+381 files in other folders)
