[tool.poetry]
name = "cheat-sheets"
version = "0.1.0"
description = ""
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
mlflow = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
